<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_action_name"
            android:title="Inicio"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Mis intereses">
        <menu>
            <item
                android:id="@+id/my_offers"
                android:icon="@drawable/ic_radio_off"
                android:title="@string/my_offers" />
            <item
                android:id="@+id/my_posts"
                android:icon="@drawable/ic_radio_off"
                android:title="@string/my_posts" />
            <item
                android:id="@+id/my_products"
                android:icon="@drawable/ic_radio_off"
                android:title="@string/my_products" />
            <item
                android:id="@+id/my_requests"
                android:icon="@drawable/ic_radio_off"
                android:title="@string/my_requests" />
        </menu>
    </item>
</menu>